# library-maid

./: .gitignore  Cargo.toml  README.md
src/: config.rs  llm.rs  main.rs  tts.rs
src/data/: category.rs  frontmatter.rs  idea.rs  mod.rs  story.rs
src/prompts/: mod.rs
src/prompts/defaults/: auto_nsfw.md  auto_sfw.md  compact.md  compact_en.md  compact_ja.md  fill.md  nsfw.md  nsfw_en.md  nsfw_ja.md  sfw.md  sfw_en.md  sfw_ja.md  title.md
src/ui/: editors.rs  library.rs  mod.rs  settings.rs  setup.rs  state.rs  style.rs  theme.rs
